KTOR-9443 Fix invalid IR encoding with extension values
